# chana-chat

./: .gitattributes  .gitignore  Cargo.toml  README.md  README_CN.md  build.sh  release.sh
air/: Cargo.toml
air/src/: conf.rs  lib.rs  logger.rs
base/: Cargo.toml
base/src/: db.rs  lib.rs  req.rs
base/src/util/: mod.rs  rand.rs  time.rs
conf/: default.toml
src/: err.rs  main.rs  server.rs  util.rs
src/model/: mod.rs
src/router/: mod.rs  ws.rs
web/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
web/public/: manifest.json
web/src/: App.css  App.jsx  index.css  index.jsx
web/src/assets/: icon.css  skeleton.css  style.css
web/src/comps/: Base.jsx  ChatHelper.js  Command.css  Command.jsx  CommandHelper.js  Form.jsx  Invitation.jsx  MediaMsg.jsx  Notifier.jsx  Topbar.css  Topbar.jsx  Topnav.css  Voice.css  Voice.jsx
web/src/stores/: chat.js
web/src/utils/: app.js  appearance.js  crypto.js  languages.js  main.js  notification.js  ws.js
web/src/views/: Chat.jsx  Engagement.jsx  Lock.jsx  PrivShare.jsx  RoomChat.jsx  Setting.jsx  Share.jsx
