[package]
name = "air"
version = "0.1.0"
edition = "2024"

[dependencies]
config = {version = "0.15.11",  default-features = false, features = ['toml'] } 
once_cell = "1.17.1"

tracing = "*"
tracing-appender = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

serde = {version = "*"}
